fixed some layout issues andd added two more portofolio projects

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -52,7 +52,7 @@
 }
 .contact__container input{
     width: 100%;
-    padding: 0.8rem 1rem;
+    padding: 0.9rem 1rem;
     margin-top: 1rem;
     border: none;
     border-radius: 8px;
